<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="setup" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="link_android_developer">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="letters_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="recipient">victoria_maksimova@mail.ru</string>
    <string name="share_with">Отправить через</string>
    <string name="mail_to">mailto:</string>
    <string name="time">2:55</string>
    <string name="track_name">Yesterday (Remastereввввввввввввввввd 2009)</string>
    <string name="track_artist">The Beatlesssssssssssssssssssssssssssssssssssssssssssssssssss</string>
    <string name="track_name_short">Yesterday (Remastered 2009)</string>
    <string name="track_artist_short">The Beatles</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="problem_with_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_find">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album">Альбом</string>
    <string name="time_current">0:30</string>
    <string name="time_name">Длительность</string>
    <string name="country">Страна</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="time_track">5:35</string>
    <string name="album_track">Yesterday (Remastered 2009)</string>
    <string name="year_track">1965</string>
    <string name="genre_track">Rock</string>
    <string name="country_track">Великобритания</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_name">Любимые треки</string>
    <string name="tracks_count">100 треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_create_pl">Завершить создание плейлиста?</string>
    <string name="finish_create_pl_msg">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="name_playlist">Best songs 2021</string>
    <string name="year_playlist">2022</string>
    <string name="time_playlist">300 минут</string>
    <string name="track_in_playlist">98 треков</string>
    <string name="empty_playlist_card">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="would_you_delete_track">Хотите удалить трек?</string>
    <string name="would_you_delete_playlist">Хотите удалить плейлист</string>
    <string name="yes_message">Да</string>
    <string name="no_message">Нет</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete_playlist_header">Удалить плейлист</string>
    <string name="delete_pl_descr">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_mes">Удалить</string>
    <string name="empty_playlist_mes">В этом плейлисте нет треков</string>
</resources>