<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:navigationIcon="@drawable/arrow_back"
        android:title="@string/setup"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:minHeight="@dimen/minHeight"
        android:paddingStart="@dimen/paddingHorizontal_small"
        android:paddingEnd="@dimen/padding_small"
        android:text="@string/dark_mode"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeight"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:drawableEndCompat="@drawable/share"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/paddingHorizontal_small"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeight"
        android:text="@string/write_support"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:drawableEndCompat="@drawable/support"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/paddingHorizontal_small"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeight"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:drawableEndCompat="@drawable/arrow_forward"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/paddingHorizontal_small"
        android:layout_gravity="center"
        />
    </LinearLayout>