<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_medium"
    android:paddingBottom="28dp"
    android:id="@+id/main">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeight"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/search"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_library"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/button_radius"
        android:layout_marginTop="@dimen/padding_medium"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/setup"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:cornerRadius="@dimen/button_radius"
        android:layout_marginTop="@dimen/padding_medium"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"/>
</LinearLayout>
