<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:minHeight="@dimen/minHeight"
    android:paddingStart="13dp"
    android:paddingEnd="@dimen/paddingHorizontal_small">
    <ImageView
        android:id="@+id/imageAlbum"
        android:layout_width="@dimen/imageSize_medium"
        android:layout_height="@dimen/imageSize_medium"
        android:src="@drawable/ic_placeholder_45"
        android:layout_marginVertical="@dimen/padding_small_8"/>
    <LinearLayout
            android:layout_width="@dimen/null_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_small_8"
            android:paddingVertical="@dimen/padding_small">
        <TextView
            android:id="@+id/trackName"
            tools:text="@string/track_name"
            style="@style/TrackViewStyle"
            android:textSize="@dimen/text_size_small"
            android:textColor="?attr/colorSecondaryVariant"
            android:maxLines="1"
            android:ellipsize="end"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/artistName"
                android:layout_width="@dimen/null_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/track_artist"
                style="@style/TrackViewStyle"
                android:maxLines="1"
                android:ellipsize="end"/>
            <TextView
                style="@style/TrackViewStyle"
                android:paddingHorizontal="5dp"
                app:drawableEndCompat="@drawable/ic_ellipse_3"/>
            <TextView
                android:id="@+id/trackTime"
                tools:text="@string/time"
                style="@style/TrackViewStyle"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"
        android:layout_gravity="center"/>
</LinearLayout>