<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.playlistcard.ui.PlaylistCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:paddingBottom="@dimen/padding_24">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_medium" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_360"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menuButton"
            style="@style/ToolbarStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationIconTint="@color/black"
            app:title=" " />
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_24"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="@string/name_playlist" />

        <TextView
            android:id="@+id/description"
            style="@style/TextViewPlaylistCard"
            android:layout_marginTop="@dimen/padding_small_8"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="@string/year_playlist" />

        <TextView
            android:id="@+id/time"
            style="@style/TextViewPlaylistCard"
            android:layout_marginTop="@dimen/padding_small_8"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="@string/time_playlist" />

        <TextView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            app:drawableStartCompat="@drawable/ic_ellipse_3"
            app:drawableTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/time"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toTopOf="@id/time" />

        <TextView
            android:id="@+id/count"
            style="@style/TextViewPlaylistCard"
            app:layout_constraintBottom_toBottomOf="@+id/dot"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toTopOf="@id/dot"
            tools:text="@string/track_in_playlist" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/ic_share_24"
            app:drawableTint="@color/black"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/ic_menu_24"
            app:drawableTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/share"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintTop_toTopOf="@id/share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlistBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_24"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="266dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/viewBSPl"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_small_8"
            android:background="@drawable/rounder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginBottom="@dimen/padding_small_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/playlist_small_view" />
        <TextView
            android:id="@+id/shareTextView"
            style="@style/TextViewPlaylistCardInfo"
            android:text="@string/share" />

        <TextView
            android:id="@+id/editTextView"
            style="@style/TextViewPlaylistCardInfo"
            android:text="@string/edit_info" />

        <TextView
            android:id="@+id/deleteTextView"
            style="@style/TextViewPlaylistCardInfo"
            android:text="@string/delete_playlist" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tracksBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_24"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="266dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_small_8"
            android:background="@drawable/rounder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_view" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>